--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
+    <!-- <item
         android:id="@+id/action_delete"
         android:icon="@drawable/baseline_delete_24"
         android:title="Delete"
         app:showAsAction="ifRoom">
 
-    </item>
+    </item> -->
+        <item
+        android:id="@+id/action_about"
+        android:title="About"
+        android:showAsAction="never" />
 </menu>
